Release history for Dist-Zilla-Util-BundleInfo

1.001004 2015-12-20T10:32:15Z 35f0336
 [Bugfix]
 - Arrays of 1 now work the same way scalars do for serialization to ini.

 [Dependencies::Stats]
 - Dependencies changed since 1.001003, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +15 ↑3 -3 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -1
 - test: +2 (recommends: ↑1 ↓1)

1.001003 2014-08-15T21:50:53Z
 [00 Trivial]
 - CPANDAY!
 - No Code Changes.
 - Tests augmented.
 - Metadata updated.
 - Whitespace adjustment.

 [Dependencies::Stats]
 - Dependencies changed since 1.001002, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑1)
 - test: -4 (recommends: ↑1 -2)

 [Metadata]
 - add 1x contributor.

 [Misc]
 - Updated POD in source side to produce less whitespace at top of generated code.

 [Tests]
 - ReportVersion test update.

1.001002 2014-07-23T19:11:00Z
 [00 Trivial]
 - Misc packaging cleanups

 [Dependencies::Stats]
 - Dependencies changed since 1.001001, see misc/*.deps* for details
 - develop: +1 -1 (suggests: +2 -1)
 - test: +2 ↑1 (recommends: +1)

1.001001 2014-06-02T22:21:02Z
 [Dependencies::Stats]
 - Dependencies changed since 1.001000, see misc/*.deps* for details
 - develop: ↑1

 [Documentation]
 - POD Indentation/Style tweaked for readability.

1.001000 2014-06-02T09:06:39Z
 [01 Plugin::payload_list]
 - New function returns payload contents in list form with MVP checked arity.

1.000000 2014-06-02T02:30:43Z
 [01 MAJOR]
 - Mostly packaging changes that will predominantly be significant for non-CPAN toolchains.

 [02 Migrated to EUMM]
 - ExtUtils::MakeMaker is now the installer of choice.
 - "Latest" dependencies moved to only recommends instead of requires.

 [03 New Version Scheme]
 - Moving from v-versions (x.y.z) to reals (x.yyyzzz)
 - This is the primary reason for the 1.x on the box.

 [Dependencies::Stats]
 - Dependencies changed since 0.1.3, see misc/*.deps* for details
 - build: -1