@@ -33,6 +33,7 @@ t/00-compile/lib_Dist_Zilla_Util_BundleInfo_pm.t
 t/00-report-prereqs.dd
 t/00-report-prereqs.t
 t/array_nonmvp.t
+t/array_nonmvp_empty.t
 t/basic.t
 t/classic.t
 weaver.ini
