@@ -255,6 +255,11 @@ sub to_dist_ini {
       next;
     }
     if ( 'ARRAY' eq ref $value ) {
+      if ( 0 == @{$value} ) {
+        require Carp;
+        Carp::carp( 'Can\'t create an INI entry for an empty array attribute ( with key: ' . $key . ' )' );
+        next;
+      }
       if ( 1 == @{$value} ) {
         push @out, $self->_dzil_config_line( $key, @{$value} );
         next;
