@@ -6,6 +6,7 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 
  [Added / test requires]
  - Dist::Zilla::Plugin::GatherDir
+ - Test::Warnings
  - perl 5.006
 
  [Changed / runtime requires]
