@@ -3,13 +3,14 @@ Release history for Dist-Zilla-Util-BundleInfo
 1.001004 2015-12-20T10:32:15Z 35f0336
  [Bugfix]
  - Arrays of 1 now work the same way scalars do for serialization to ini.
+ - Arrays of 0 now dont emit anything for serialization to ini ( and warns )
 
  [Dependencies::Stats]
  - Dependencies changed since 1.001003, see misc/*.deps* for details
  - configure: +1 (recommends: ↑1)
  - develop: +15 ↑3 -3 (recommends: +1, suggests: ↑2)
  - runtime: ↓1 -1
- - test: +2 (recommends: ↑1 ↓1)
+ - test: +3 (recommends: ↑1 ↓1)
 
 1.001003 2014-08-15T21:50:53Z
  [00 Trivial]
